[gd_scene load_steps=17 format=4 uid="uid://buvno34ekq64y"]

[ext_resource type="Theme" uid="uid://di5s5o2io4evk" path="res://ui/themes/pixel_theme.tres" id="1_3qlej"]
[ext_resource type="Script" path="res://ui/menu/menu-manager/menu-manager.gd" id="2_iubpq"]
[ext_resource type="AudioStream" uid="uid://dg21vbrfhagb4" path="res://audio/music/tya-heal-my-soul.wav" id="3_6x4tw"]
[ext_resource type="TileSet" uid="uid://dwdcr5o5pbnnh" path="res://world_gen/tileset.tres" id="3_7pihi"]
[ext_resource type="PackedScene" uid="uid://b4c24i7um8bcb" path="res://world_gen/chunk_background_overlay/background-sky.tscn" id="3_n7joi"]
[ext_resource type="PackedScene" uid="uid://ctphpuncleji7" path="res://ui/background/background.tscn" id="4_i5fqp"]
[ext_resource type="PackedScene" uid="uid://vmc4p4w4m8mx" path="res://ui/themes/title.tscn" id="5_jyvln"]
[ext_resource type="Texture2D" uid="uid://csstpunpaf0fa" path="res://ui/icon/icon-play.png" id="6_n0wge"]
[ext_resource type="Texture2D" uid="uid://c6j31ss6twqu4" path="res://ui/icon/icon-parameter.png" id="7_xg5sk"]
[ext_resource type="Texture2D" uid="uid://dtc7b580frfw" path="res://ui/icon/icon-quit.svg" id="8_7em87"]
[ext_resource type="Script" path="res://ui/world/world_list.gd" id="10_47jvw"]
[ext_resource type="PackedScene" uid="uid://dgqb404fupsdg" path="res://components/particules/ascend-particules.tscn" id="11_k6t6m"]

[sub_resource type="Environment" id="Environment_41eou"]
background_mode = 3
background_canvas_max_layer = 1000
glow_enabled = true
glow_intensity = 4.0
glow_strength = 0.33
glow_bloom = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4e63"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f4vsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ft2sx"]
bg_color = Color(0.133, 0.133, 0.133, 0.589)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.765063, 0.858997, 0.17191, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MenuManager" type="Control" node_paths=PackedStringArray("seed_box", "warning_message")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_3qlej")
script = ExtResource("2_iubpq")
seed_box = NodePath("MenuContent/GenerateWorld/SeedBoxContainer/SeedBox")
warning_message = NodePath("MenuContent/GenerateWorld/WarningMessage")
default_color = Color(1, 1, 1, 1)

[node name="BackgroundSky" parent="." instance=ExtResource("3_n7joi")]
layout_mode = 1

[node name="UI-Background" parent="." instance=ExtResource("4_i5fqp")]
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="particules" parent="." instance=ExtResource("11_k6t6m")]
process_mode = 3
z_index = 0
position = Vector2(640, 736)
emission_rect_extents = Vector2(700, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+/yYAAAAIACEAAAD+/ycAAAAIACEAAAD+/ygAAAAIACEAAAD+/ykAAAAIACEAAAD+/yoAAAAIACEAAAD+/ysAAAAIACEAAAD+/ywAAAAIACMAAAD//yYAAAAJACIAAAD//ycAAAAJACIAAAD//ygAAAAJACIAAAD//ykAAAAJACIAAAD//yoAAAAJACIAAAD//ysAAAAJACIAAAD//ywAAAAJACMAAAAAACYAAAAJACIAAAAAACcAAAAJACIAAAAAACgAAAAJACIAAAAAACkAAAAJACIAAAAAACoAAAAJACIAAAAAACsAAAAJACIAAAAAACwAAAAJACMAAAABACUAAAAGACEAAAABACYAAAAJACIAAAABACcAAAAJACIAAAABACgAAAAJACIAAAABACkAAAAJACIAAAABACoAAAAJACIAAAABACsAAAAJACIAAAABACwAAAAJACMAAAACACcAAAAJACIAAAACACgAAAAJACIAAAACACkAAAAJACIAAAACACoAAAAJACIAAAACACsAAAAJACIAAAACACwAAAAJACMAAAADACYAAAAJACIAAAADACcAAAAJACIAAAADACgAAAAJACIAAAADACkAAAAJACIAAAADACoAAAAJACIAAAADACsAAAAJACIAAAADACwAAAAJACMAAAAEACUAAAAJACAAAAAEACYAAAAJACIAAAAEACcAAAAJACIAAAAEACgAAAAJACIAAAAEACkAAAAJACIAAAAEACoAAAAJACIAAAAEACsAAAAJACIAAAAEACwAAAAJACMAAAAFACcAAAAJACIAAAAFACgAAAAJACIAAAAFACkAAAAJACIAAAAFACoAAAAJACIAAAAFACsAAAAJACIAAAAFACwAAAAJACMAAAAGACgAAAAJACIAAAAGACkAAAAJACIAAAAGACoAAAAJACIAAAAGACsAAAAJACIAAAAGACwAAAAJACMAAAAHACcAAAAJACIAAAAHACgAAAAJACIAAAAHACkAAAAJACIAAAAHACoAAAAJACIAAAAHACsAAAAJACIAAAAHACwAAAAJACMAAAAIACgAAAAJACIAAAAIACkAAAAJACIAAAAIACoAAAAJACIAAAAIACsAAAAJACIAAAAIACwAAAAJACMAAAAJACgAAAAJACIAAAAJACkAAAAJACIAAAAJACoAAAAJACIAAAAJACsAAAAJACIAAAAJACwAAAAJACMAAAAKACgAAAAJACIAAAAKACkAAAAJACIAAAAKACoAAAAJACIAAAAKACsAAAAJACIAAAAKACwAAAAJACMAAAALACkAAAAJACIAAAALACoAAAAJACIAAAALACsAAAAJACIAAAALACwAAAAJACMAAAAMACoAAAAJACIAAAAMACsAAAAJACIAAAAMACwAAAAJACMAAAANACkAAAAJACIAAAANACoAAAAJACIAAAANACsAAAAJACIAAAANACwAAAAJACMAAAAOACoAAAAJACIAAAAOACsAAAAJACIAAAAOACwAAAAJACMAAAAPACoAAAAJACIAAAAPACsAAAAJACIAAAAPACwAAAAJACMAAAAQACoAAAAJACIAAAAQACsAAAAJACIAAAAQACwAAAAJACMAAAARACsAAAAJACIAAAARACwAAAAJACMAAAASACsAAAAJACIAAAASACwAAAAJACMAAAATACoAAAAJACIAAAATACsAAAAJACIAAAATACwAAAAJACMAAAAUACsAAAAJACIAAAAUACwAAAAJACMAAAAVACsAAAAJACIAAAAVACwAAAAJACMAAAAWACsAAAAJACIAAAAWACwAAAAJACMAAAAXACoAAAAGACEAAAAXACsAAAAJACIAAAAXACwAAAAJACMAAAAYACwAAAAJACMAAAAZACwAAAAJACMAAAAaACwAAAAJACMAAAAbACsAAAAJACIAAAAbACwAAAAJACMAAAAcACwAAAAJACMAAAAdACwAAAAJACMAAAAeACsAAAAJACIAAAAeACwAAAAJACMAAAAfACsAAAAJACIAAAAfACwAAAAJACMAAAAgACoAAAAJACIAAAAgACsAAAAJACIAAAAgACwAAAAJACMAAAAhACsAAAAJACIAAAAhACwAAAAJACMAAAAiACsAAAAJACIAAAAiACwAAAAJACMAAAAjACsAAAAJACIAAAAjACwAAAAJACMAAAAkACoAAAAJACIAAAAkACsAAAAJACIAAAAkACwAAAAJACMAAAAlACoAAAAJACIAAAAlACsAAAAJACIAAAAlACwAAAAJACMAAAAmACsAAAAJACIAAAAmACwAAAAJACMAAAAnACsAAAAJACIAAAAnACwAAAAJACMAAAAoACoAAAAJACIAAAAoACsAAAAJACIAAAAoACwAAAAJACMAAAApACsAAAAJACIAAAApACwAAAAJACMAAAAqACoAAAAJACIAAAAqACsAAAAJACIAAAAqACwAAAAJACMAAAArACoAAAAJACIAAAArACsAAAAJACIAAAArACwAAAAJACMAAAAsACoAAAAJACIAAAAsACsAAAAJACIAAAAsACwAAAAJACMAAAAtACkAAAAJACIAAAAtACoAAAAJACIAAAAtACsAAAAJACIAAAAtACwAAAAJACMAAAAuACgAAAAJACIAAAAuACkAAAAJACIAAAAuACoAAAAJACIAAAAuACsAAAAJACIAAAAuACwAAAAJACMAAAAvACkAAAAJACIAAAAvACoAAAAJACIAAAAvACsAAAAJACIAAAAvACwAAAAJACMAAAAwACgAAAAJACIAAAAwACkAAAAJACIAAAAwACoAAAAJACIAAAAwACsAAAAJACIAAAAwACwAAAAJACMAAAAxACkAAAAJACIAAAAxACoAAAAJACIAAAAxACsAAAAJACIAAAAxACwAAAAJACMAAAAyACgAAAAJACIAAAAyACkAAAAJACIAAAAyACoAAAAJACIAAAAyACsAAAAJACIAAAAyACwAAAAJACMAAAAzACgAAAAJACIAAAAzACkAAAAJACIAAAAzACoAAAAJACIAAAAzACsAAAAJACIAAAAzACwAAAAJACMAAAA0ACcAAAAJACIAAAA0ACgAAAAJACIAAAA0ACkAAAAJACIAAAA0ACoAAAAJACIAAAA0ACsAAAAJACIAAAA0ACwAAAAJACMAAAA1ACgAAAAJACIAAAA1ACkAAAAJACIAAAA1ACoAAAAJACIAAAA1ACsAAAAJACIAAAA1ACwAAAAJACMAAAA2ACcAAAAJACIAAAA2ACgAAAAJACIAAAA2ACkAAAAJACIAAAA2ACoAAAAJACIAAAA2ACsAAAAJACIAAAA2ACwAAAAJACMAAAA3ACgAAAAJACIAAAA3ACkAAAAJACIAAAA3ACoAAAAJACIAAAA3ACsAAAAJACIAAAA3ACwAAAAJACMAAAA4ACcAAAAJACIAAAA4ACgAAAAJACIAAAA4ACkAAAAJACIAAAA4ACoAAAAJACIAAAA4ACsAAAAJACIAAAA4ACwAAAAJACMAAAA5ACcAAAAJACIAAAA5ACgAAAAJACIAAAA5ACkAAAAJACIAAAA5ACoAAAAJACIAAAA5ACsAAAAJACIAAAA5ACwAAAAJACMAAAA6ACcAAAAJACIAAAA6ACgAAAAJACIAAAA6ACkAAAAJACIAAAA6ACoAAAAJACIAAAA6ACsAAAAJACIAAAA6ACwAAAAJACMAAAA7ACYAAAAJACIAAAA7ACcAAAAJACIAAAA7ACgAAAAJACIAAAA7ACkAAAAJACIAAAA7ACoAAAAJACIAAAA7ACsAAAAJACIAAAA7ACwAAAAJACMAAAA8ACcAAAAJACIAAAA8ACgAAAAJACIAAAA8ACkAAAAGACIAAAA8ACoAAAALACIAAAA8ACsAAAAGACEAAAA8ACwAAAAJACMAAAA9ACcAAAAJACIAAAA9ACgAAAAJACIAAAA9ACkAAAAJACMAAAA9ACoAAAANAAsAAAA9ACsAAAAKACAAAAA9ACwAAAAJACMAAAA+ACYAAAAJACIAAAA+ACcAAAAJACIAAAA+ACgAAAAJACIAAAA+ACkAAAAJACMAAAA+ACoAAAAPAAsAAAA+ACsAAAAKACAAAAA+ACwAAAAJACMAAAA/ACUAAAAJACIAAAA/ACYAAAAJACIAAAA/ACcAAAAGACIAAAA/ACgAAAALACIAAAA/ACkAAAAKACIAAAA/ACoAAAAIACEAAAA/ACsAAAAFACEAAAA/ACwAAAAJACMAAABAACYAAAAJACIAAABAACcAAAAJACMAAABAACgAAAANAAsAAABAACkAAAAKACAAAABAACoAAAAJACIAAABAACsAAAAJACIAAABAACwAAAAJACMAAABBACYAAAAGACIAAABBACcAAAALACMAAABBACgAAAAOAAsAAABBACkAAAAKACAAAABBACoAAAAJACIAAABBACsAAAAJACIAAABBACwAAAAJACMAAABCACYAAAAJACMAAABCACcAAAAMAAgAAABCACgAAAAPAAoAAABCACkAAAAKACAAAABCACoAAAAJACIAAABCACsAAAAJACIAAABCACwAAAAJACMAAABDACcAAAAIACEAAABDACgAAAAIACEAAABDACkAAAAFACEAAABDACoAAAAJACIAAABDACsAAAAJACIAAABDACwAAAAJACMAAABEACcAAAAJACIAAABEACgAAAAJACIAAABEACkAAAAJACIAAABEACoAAAAJACIAAABEACsAAAAJACIAAABEACwAAAAJACMAAABFACYAAAAJACIAAABFACcAAAAJACIAAABFACgAAAAJACIAAABFACkAAAAJACIAAABFACoAAAAJACIAAABFACsAAAAJACIAAABFACwAAAAJACMAAABGACcAAAAJACIAAABGACgAAAAJACIAAABGACkAAAAJACIAAABGACoAAAAJACIAAABGACsAAAAJACIAAABGACwAAAAJACMAAABHACcAAAAJACIAAABHACgAAAAJACIAAABHACkAAAAJACIAAABHACoAAAAJACIAAABHACsAAAAJACIAAABHACwAAAAJACMAAABIACYAAAAJACIAAABIACcAAAAJACIAAABIACgAAAAJACIAAABIACkAAAAJACIAAABIACoAAAAJACIAAABIACsAAAAJACIAAABIACwAAAAJACMAAABJACcAAAAJACIAAABJACgAAAAJACIAAABJACkAAAAJACIAAABJACoAAAAJACIAAABJACsAAAAJACIAAABJACwAAAAJACMAAABKACcAAAAJACIAAABKACgAAAAJACIAAABKACkAAAAJACIAAABKACoAAAAJACIAAABKACsAAAAJACIAAABKACwAAAAJACMAAABLACcAAAAJACIAAABLACgAAAAJACIAAABLACkAAAAJACIAAABLACoAAAAJACIAAABLACsAAAAJACIAAABLACwAAAAJACMAAABMACcAAAAJACIAAABMACgAAAAJACIAAABMACkAAAAJACIAAABMACoAAAAJACIAAABMACsAAAAJACIAAABMACwAAAAJACMAAABNACYAAAAJACIAAABNACcAAAAJACIAAABNACgAAAAJACIAAABNACkAAAAJACIAAABNACoAAAAJACIAAABNACsAAAAJACIAAABNACwAAAAJACMAAABOACcAAAAJACIAAABOACgAAAAJACIAAABOACkAAAAJACIAAABOACoAAAAJACIAAABOACsAAAAJACIAAABOACwAAAAJACMAAABPACcAAAAJACIAAABPACgAAAAJACIAAABPACkAAAAJACIAAABPACoAAAAJACIAAABPACsAAAAJACIAAABPACwAAAAJACMAAABQACcAAAAJACIAAABQACgAAAAJACIAAABQACkAAAAJACIAAABQACoAAAAJACIAAABQACsAAAAJACIAAABQACwAAAAJACMAAABRACcAAAAJACIAAABRACgAAAAJACIAAABRACkAAAAJACIAAABRACoAAAAJACIAAABRACsAAAAJACIAAABRACwAAAAJACMAAABSACcAAAALACIAAABSACgAAAALACIAAABSACkAAAALACIAAABSACoAAAALACIAAABSACsAAAALACIAAABSACwAAAALACMAAAD+/yQAAAAIACAAAAD+/yUAAAAIACEAAAD//yQAAAAKACAAAAD//yUAAAAJACIAAAAAACQAAAAKACAAAAAAACUAAAAJACIAAAABACMAAAAaAAkAAAABACQAAAALACAAAAACACUAAAAKACAAAAACACYAAAAJACIAAAADACQAAAAYAAMAAAADACUAAAAKACAAAAAEACMAAAAaAAQAAAAEACQAAAAAACAAAAAFACUAAAALACAAAAAFACYAAAAGACEAAAAGACYAAAAKACAAAAAGACcAAAAJACIAAAAHACUAAAAaAAcAAAAHACYAAAAKACAAAAAIACYAAAAKACAAAAAIACcAAAAJACIAAAAJACYAAAAKACAAAAAJACcAAAAJACIAAAAKACYAAAALACAAAAAKACcAAAAGACEAAAALACcAAAALACAAAAALACgAAAAGACEAAAAMACgAAAAKACAAAAAMACkAAAAJACIAAAANACcAAAAaAAQAAAANACgAAAAKACAAAAAOACgAAAAKACAAAAAOACkAAAAJACIAAAAPACgAAAAKACAAAAAPACkAAAAJACIAAAAQACgAAAALACAAAAAQACkAAAAGACEAAAARACkAAAAKACAAAAARACoAAAAJACIAAAASACkAAAAKACAAAAASACoAAAAJACIAAAATACgAAAAaAAUAAAATACkAAAAKACAAAAAUACkAAAAKACAAAAAUACoAAAAJACIAAAAVACkAAAAKACAAAAAVACoAAAAJACIAAAAWACkAAAAKACAAAAAWACoAAAAJACIAAAAXACgAAAAaAAkAAAAXACkAAAALACAAAAAYACoAAAAKACAAAAAYACsAAAAJACIAAAAZACoAAAAKACAAAAAZACsAAAAJACIAAAAaACoAAAAKACAAAAAaACsAAAAJACIAAAAbACkAAAAYAAMAAAAbACoAAAAKACAAAAAcACoAAAAKACAAAAAcACsAAAAJACIAAAAdACoAAAAKACAAAAAdACsAAAAJACIAAAAeACkAAAAIACAAAAAeACoAAAAFACEAAAAfACkAAAAKACAAAAAfACoAAAAJACIAAAAgACgAAAAaAAcAAAAgACkAAAAKACAAAAAhACkAAAAKACAAAAAhACoAAAAJACIAAAAiACkAAAAKACAAAAAiACoAAAAJACIAAAAjACkAAAAKACAAAAAjACoAAAAJACIAAAAkACgAAAAYAAMAAAAkACkAAAAKACAAAAAlACgAAAAaAAkAAAAlACkAAAAKACAAAAAmACkAAAAKACAAAAAmACoAAAAJACIAAAAnACkAAAAKACAAAAAnACoAAAAJACIAAAAoACgAAAAbAAMAAAAoACkAAAAKACAAAAApACkAAAAKACAAAAApACoAAAAJACIAAAAqACgAAAAIACAAAAAqACkAAAAFACEAAAArACgAAAAKACAAAAArACkAAAAJACIAAAAsACgAAAAKACAAAAAsACkAAAAJACIAAAAtACcAAAAIACAAAAAtACgAAAAFACEAAAAuACYAAAAaAAYAAAAuACcAAAAKACAAAAAvACcAAAAKACAAAAAvACgAAAAJACIAAAAwACYAAAAaAAkAAAAwACcAAAAKACAAAAAxACcAAAAKACAAAAAxACgAAAAJACIAAAAyACYAAAAIACAAAAAyACcAAAAFACEAAAAzACYAAAAKACAAAAAzACcAAAAJACIAAAA0ACUAAAAaAAcAAAA0ACYAAAAKACAAAAA1ACYAAAAKACAAAAA1ACcAAAAJACIAAAA2ACUAAAAaAAMAAAA2ACYAAAAKACAAAAA3ACYAAAAKACAAAAA3ACcAAAAJACIAAAA4ACUAAAAIACAAAAA4ACYAAAAFACEAAAA5ACUAAAAKACAAAAA5ACYAAAAJACIAAAA6ACUAAAAKACAAAAA6ACYAAAAJACIAAAA7ACQAAAAaAAQAAAA7ACUAAAAKACAAAAA8ACUAAAAKACAAAAA8ACYAAAAJACIAAAA9ACUAAAAKACAAAAA9ACYAAAAJACIAAAA+ACQAAAAIACAAAAA+ACUAAAAFACEAAAA/ACMAAAAaAAQAAAA/ACQAAAAKACAAAABAACQAAAAKACAAAABAACUAAAAJACIAAABBACQAAAAKACAAAABBACUAAAAJACIAAABCACQAAAALACAAAABCACUAAAAGACEAAABDACUAAAAKACAAAABDACYAAAAFACIAAABEACUAAAAKACAAAABEACYAAAAJACIAAABFACQAAAAZAAMAAABFACUAAAAKACAAAABGACUAAAAKACAAAABGACYAAAAJACIAAABHACUAAAAKACAAAABHACYAAAAJACIAAABIACQAAAAaAAQAAABIACUAAAAKACAAAABJACUAAAAKACAAAABJACYAAAAJACIAAABKACUAAAAKACAAAABKACYAAAAJACIAAABLACUAAAAKACAAAABLACYAAAAJACIAAABMACUAAAAKACAAAABMACYAAAAJACIAAABNACQAAAAaAAkAAABNACUAAAAKACAAAABOACUAAAAKACAAAABOACYAAAAJACIAAABPACUAAAAKACAAAABPACYAAAAJACIAAABQACUAAAAKACAAAABQACYAAAAJACIAAABRACUAAAAKACAAAABRACYAAAAJACIAAABSACUAAAALACAAAABSACYAAAALACIAAABSAC8AAAALAAcAAABSAC4AAAALAAYAAABSAC0AAAALAAQAAABRAC8AAAAJAAcAAABRAC4AAAAJAAYAAABRAC0AAAAKAAQAAABQAC8AAAAJAAcAAABQAC4AAAAJAAYAAABQAC0AAAAKAAQAAABPAC8AAAAJAAcAAABPAC4AAAAJAAYAAABPAC0AAAAKAAQAAABOAC8AAAAJAAcAAABOAC4AAAAJAAYAAABOAC0AAAAKAAQAAABNAC8AAAAJAAcAAABNAC4AAAAJAAYAAABNAC0AAAAKAAQAAABMAC8AAAAJAAcAAABMAC4AAAAJAAYAAABMAC0AAAAKAAQAAABLAC8AAAAJAAcAAABLAC4AAAAJAAYAAABLAC0AAAAKAAQAAABKAC8AAAAJAAcAAABKAC4AAAAJAAYAAABKAC0AAAAKAAQAAABJAC8AAAAJAAcAAABJAC4AAAAJAAYAAABJAC0AAAAKAAQAAABIAC8AAAAJAAcAAABIAC4AAAAJAAYAAABIAC0AAAAKAAQAAABHAC8AAAAJAAcAAABHAC4AAAAJAAYAAABHAC0AAAAKAAQAAABGAC8AAAAJAAcAAABGAC4AAAAJAAYAAABGAC0AAAAKAAQAAABFAC8AAAAJAAcAAABFAC4AAAAJAAYAAABFAC0AAAAKAAQAAABEAC8AAAAJAAcAAABEAC4AAAAJAAYAAABEAC0AAAAKAAQAAABDAC8AAAAJAAcAAABDAC4AAAAJAAYAAABDAC0AAAAKAAQAAABCAC8AAAAJAAcAAABCAC4AAAAJAAYAAABCAC0AAAAKAAQAAABBAC8AAAAJAAcAAABBAC4AAAAJAAYAAABBAC0AAAAKAAQAAABAAC8AAAAJAAcAAABAAC4AAAAJAAYAAABAAC0AAAAKAAQAAAA/AC8AAAAJAAcAAAA/AC4AAAAJAAYAAAA/AC0AAAAKAAQAAAA+AC8AAAAJAAcAAAA+AC4AAAAJAAYAAAA+AC0AAAAKAAQAAAA9AC8AAAAJAAcAAAA9AC4AAAAJAAYAAAA9AC0AAAAKAAQAAAA8AC8AAAAJAAcAAAA8AC4AAAAJAAYAAAA8AC0AAAAKAAQAAAA7AC8AAAAJAAcAAAA7AC4AAAAJAAYAAAA7AC0AAAAKAAQAAAA6AC8AAAAJAAcAAAA6AC4AAAAJAAYAAAA6AC0AAAAKAAQAAAA5AC8AAAAJAAcAAAA5AC4AAAAJAAYAAAA5AC0AAAAKAAQAAAA4AC8AAAAJAAcAAAA4AC4AAAAJAAYAAAA4AC0AAAAKAAQAAAA3AC8AAAAJAAcAAAA3AC4AAAAJAAYAAAA3AC0AAAAKAAQAAAA2AC8AAAAJAAcAAAA2AC4AAAAJAAYAAAA2AC0AAAAKAAQAAAA1AC8AAAAJAAcAAAA1AC4AAAAJAAYAAAA1AC0AAAAKAAQAAAA0AC8AAAAJAAcAAAA0AC4AAAAJAAYAAAA0AC0AAAAKAAQAAAAzAC8AAAAJAAcAAAAzAC4AAAAJAAYAAAAzAC0AAAAKAAQAAAAyAC8AAAAJAAcAAAAyAC4AAAAJAAYAAAAyAC0AAAAKAAQAAAAxAC8AAAAJAAcAAAAxAC4AAAAJAAYAAAAxAC0AAAAKAAQAAAAwAC8AAAAJAAcAAAAwAC4AAAAJAAYAAAAwAC0AAAAKAAQAAAAvAC8AAAAJAAcAAAAvAC4AAAAJAAYAAAAvAC0AAAAKAAQAAAAuAC8AAAAJAAcAAAAuAC4AAAAJAAYAAAAuAC0AAAAKAAQAAAAtAC8AAAAJAAcAAAAtAC4AAAAJAAYAAAAtAC0AAAAKAAQAAAAsAC8AAAAJAAcAAAAsAC4AAAAJAAYAAAAsAC0AAAAKAAQAAAArAC8AAAAJAAcAAAArAC4AAAAJAAYAAAArAC0AAAAKAAQAAAAqAC8AAAAJAAcAAAAqAC4AAAAJAAYAAAAqAC0AAAAKAAQAAAApAC8AAAAJAAcAAAApAC4AAAAJAAYAAAApAC0AAAAKAAQAAAAoAC8AAAAJAAcAAAAoAC4AAAAJAAYAAAAoAC0AAAAKAAQAAAAnAC8AAAAJAAcAAAAnAC4AAAAJAAYAAAAnAC0AAAAKAAQAAAAmAC8AAAAJAAcAAAAmAC4AAAAJAAYAAAAmAC0AAAAKAAQAAAAlAC8AAAAJAAcAAAAlAC4AAAAJAAYAAAAlAC0AAAAKAAQAAAAkAC8AAAAJAAcAAAAkAC4AAAAJAAYAAAAkAC0AAAAKAAQAAAAjAC8AAAAJAAcAAAAjAC4AAAAJAAYAAAAjAC0AAAAKAAQAAAAiAC8AAAAJAAcAAAAiAC4AAAAJAAYAAAAiAC0AAAAKAAQAAAAhAC8AAAAJAAcAAAAhAC4AAAAJAAYAAAAhAC0AAAAKAAQAAAAgAC8AAAAJAAcAAAAgAC4AAAAJAAYAAAAgAC0AAAAKAAQAAAAfAC8AAAAJAAcAAAAfAC4AAAAJAAYAAAAfAC0AAAAKAAQAAAAeAC8AAAAJAAcAAAAeAC4AAAAJAAYAAAAeAC0AAAAKAAQAAAAdAC8AAAAJAAcAAAAdAC4AAAAJAAYAAAAdAC0AAAAKAAQAAAAcAC8AAAAJAAcAAAAcAC4AAAAJAAYAAAAcAC0AAAAKAAQAAAAbAC8AAAAJAAcAAAAbAC4AAAAJAAYAAAAbAC0AAAAKAAQAAAAaAC8AAAAJAAcAAAAaAC4AAAAJAAYAAAAaAC0AAAAKAAQAAAAZAC8AAAAJAAcAAAAZAC4AAAAJAAYAAAAZAC0AAAAKAAQAAAAYAC8AAAAJAAcAAAAYAC4AAAAJAAYAAAAYAC0AAAAKAAQAAAAXAC8AAAAJAAcAAAAXAC4AAAAJAAYAAAAXAC0AAAAKAAQAAAAWAC8AAAAJAAcAAAAWAC4AAAAJAAYAAAAWAC0AAAAKAAQAAAAVAC8AAAAJAAcAAAAVAC4AAAAJAAYAAAAVAC0AAAAKAAQAAAAUAC8AAAAJAAcAAAAUAC4AAAAJAAYAAAAUAC0AAAAKAAQAAAATAC8AAAAJAAcAAAATAC4AAAAJAAYAAAATAC0AAAAKAAQAAAASAC8AAAAJAAcAAAASAC4AAAAJAAYAAAASAC0AAAAKAAQAAAARAC8AAAAJAAcAAAARAC4AAAAJAAYAAAARAC0AAAAKAAQAAAAQAC8AAAAJAAcAAAAQAC4AAAAJAAYAAAAQAC0AAAAKAAQAAAAPAC8AAAAJAAcAAAAPAC4AAAAJAAYAAAAPAC0AAAAKAAQAAAAOAC8AAAAJAAcAAAAOAC4AAAAJAAYAAAAOAC0AAAAKAAQAAAANAC8AAAAJAAcAAAANAC4AAAAJAAYAAAANAC0AAAAKAAQAAAAMAC8AAAAJAAcAAAAMAC4AAAAJAAYAAAAMAC0AAAAKAAQAAAALAC8AAAAJAAcAAAALAC4AAAAJAAYAAAALAC0AAAAKAAQAAAAKAC8AAAAJAAcAAAAKAC4AAAAJAAYAAAAKAC0AAAAKAAQAAAAJAC8AAAAJAAcAAAAJAC4AAAAJAAYAAAAJAC0AAAAKAAQAAAAIAC8AAAAJAAcAAAAIAC4AAAAJAAYAAAAIAC0AAAAKAAQAAAAHAC8AAAAJAAcAAAAHAC4AAAAJAAYAAAAHAC0AAAAKAAQAAAAGAC8AAAAJAAcAAAAGAC4AAAAJAAYAAAAGAC0AAAAKAAQAAAAFAC8AAAAJAAcAAAAFAC4AAAAJAAYAAAAFAC0AAAAKAAQAAAAEAC8AAAAJAAcAAAAEAC4AAAAJAAYAAAAEAC0AAAAKAAQAAAADAC8AAAAJAAcAAAADAC4AAAAJAAYAAAADAC0AAAAKAAQAAAACAC8AAAAJAAcAAAACAC4AAAAJAAYAAAACAC0AAAAKAAQAAAABAC8AAAAJAAcAAAABAC4AAAAJAAYAAAABAC0AAAAKAAQAAAAAAC8AAAAJAAcAAAAAAC4AAAAJAAYAAAAAAC0AAAAKAAQAAAD//y8AAAAJAAcAAAD//y4AAAAJAAYAAAD//y0AAAAKAAQAAAD+/y8AAAAIAAcAAAD+/y4AAAAIAAUAAAD+/y0AAAAIAAQAAAA=")
tile_set = ExtResource("3_7pihi")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_41eou")

[node name="Music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_6x4tw")
bus = &"Music"

[node name="MenuContent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -113.0
offset_right = 175.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="MenuContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Title" parent="MenuContent" instance=ExtResource("5_jyvln")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Tilescape"

[node name="MarginContainer" type="MarginContainer" parent="MenuContent"]
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Menu" type="HBoxContainer" parent="MenuContent"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 0
alignment = 1

[node name="PlayBtn" type="Button" parent="MenuContent/Menu"]
material = SubResource("ShaderMaterial_l4e63")
layout_mode = 2
icon = ExtResource("6_n0wge")
flat = true
icon_alignment = 1

[node name="ParametersBtn" type="Button" parent="MenuContent/Menu"]
material = SubResource("ShaderMaterial_f4vsl")
layout_mode = 2
icon = ExtResource("7_xg5sk")
flat = true
icon_alignment = 1

[node name="QuitBtn" type="Button" parent="MenuContent/Menu"]
layout_mode = 2
icon = ExtResource("8_7em87")
flat = true
icon_alignment = 1

[node name="GenerateWorld" type="VBoxContainer" parent="MenuContent"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="WorldBoxContainer" type="HBoxContainer" parent="MenuContent/GenerateWorld"]
layout_mode = 2
alignment = 1

[node name="WorldNameLbl" type="Label" parent="MenuContent/GenerateWorld/WorldBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name"

[node name="WorldNameTextEdit" type="TextEdit" parent="MenuContent/GenerateWorld/WorldBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New world"
scroll_fit_content_height = true

[node name="WarningMessage" type="Label" parent="MenuContent/GenerateWorld"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.756863, 0.027451, 1)
theme_override_font_sizes/font_size = 16
text = "A world with this name already exists"
autowrap_mode = 3

[node name="SeedBoxContainer" type="HBoxContainer" parent="MenuContent/GenerateWorld"]
layout_mode = 2
alignment = 1

[node name="SeedLbl" type="Label" parent="MenuContent/GenerateWorld/SeedBoxContainer"]
layout_mode = 2
text = "Seed"
horizontal_alignment = 1

[node name="SeedBox" type="SpinBox" parent="MenuContent/GenerateWorld/SeedBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+11
alignment = 2

[node name="GenerateWorldBtn" type="Button" parent="MenuContent/GenerateWorld"]
layout_mode = 2
text = "Generate new world"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuContent/GenerateWorld"]
layout_mode = 2
size_flags_horizontal = 8

[node name="GenerateCancelBtn" type="Button" parent="MenuContent/GenerateWorld/HBoxContainer2"]
layout_mode = 2
text = "Cancel"

[node name="PlayWorld" type="VBoxContainer" parent="MenuContent"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MenuContent/PlayWorld"]
custom_minimum_size = Vector2(600, 215)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ft2sx")

[node name="WorldList" type="VBoxContainer" parent="MenuContent/PlayWorld/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("10_47jvw")

[node name="GenerateBtn" type="Button" parent="MenuContent/PlayWorld"]
layout_mode = 2
text = "Generate a new world"

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuContent/PlayWorld"]
layout_mode = 2

[node name="PlayWorldBtn" type="Button" parent="MenuContent/PlayWorld/HBoxContainer2"]
layout_mode = 2
text = "Play"

[node name="PlayCancelBtn" type="Button" parent="MenuContent/PlayWorld/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Cancel"

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 544.0
offset_top = 448.0
offset_right = 683.0
offset_bottom = 509.0

[node name="Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "3"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
enabled = false

[connection signal="pressed" from="MenuContent/Menu/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MenuContent/Menu/ParametersBtn" to="." method="_on_parameters_btn_pressed"]
[connection signal="pressed" from="MenuContent/Menu/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="MenuContent/GenerateWorld/GenerateWorldBtn" to="." method="_on_generate_world_btn_pressed"]
[connection signal="pressed" from="MenuContent/GenerateWorld/HBoxContainer2/GenerateCancelBtn" to="." method="_on_generate_cancel_btn_pressed"]
[connection signal="pressed" from="MenuContent/PlayWorld/GenerateBtn" to="." method="_on_generate_btn_pressed"]
[connection signal="pressed" from="MenuContent/PlayWorld/HBoxContainer2/PlayWorldBtn" to="." method="_on_play_world_btn_pressed"]
[connection signal="pressed" from="MenuContent/PlayWorld/HBoxContainer2/PlayCancelBtn" to="." method="_on_play_cancel_btn_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button3" to="." method="_on_button_3_pressed"]
